--- a/Views/vHome.xaml
+++ b/Views/vHome.xaml
@@ -2,61 +2,105 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="agalloS5A.Views.vHome"
-             Title="vHome">
+             Title="Persona">
     <VerticalStackLayout Padding="20" Spacing="20">
         <Label 
-            Text="Semana 5 - SQLite!"
+            Text="Semana 5 - SQLite"
             VerticalOptions="Center" 
-            FontSize="20"
-            HorizontalOptions="Center" />
+            FontSize="24"
+            HorizontalOptions="Center" 
+            FontAttributes="Bold"/>
 
         <Entry x:Name="txtNombre"
-               Placeholder="Ingrese su nombre: "/>
+               Placeholder="Ingrese su nombre: "
+               Margin="0,10,0,10"
+               Background="#E0E0E0"
+               TextColor="Black"
+               PlaceholderColor="Gray"
+               FontAttributes="Bold"/>
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="btnInsertarDato"
-                    Text="Insertar Dato"
-                    Clicked="btnInsertarDato_Clicked"
-                    Grid.Row="0"
-                    Grid.Column="0"/>
-
             <Label x:Name="statusMessage"
                    FontSize="18"
-                   TextColor="Fuchsia"
-                   Grid.Row="1"
+                   TextColor="DarkSlateGray"
+                   Grid.Row="0"
                    Grid.Column="0"/>
+            
+            <Button x:Name="btnInsertarDato"
+                    Text="Insertar Persona"
+                    Clicked="btnInsertarDato_Clicked"
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    BackgroundColor="#4CAF50"
+                    TextColor="White"
+                    CornerRadius="10"
+                    Margin="0,10,0,10"/>
 
             <Button x:Name="btnListarPersonas"
                     Text="Listar Personas"
                     Clicked="btnListarPersonas_Clicked"
                     Grid.Row="2"
-                    Grid.Column="0"/>
+                    Grid.Column="0"
+                    BackgroundColor="#2196F3"
+                    TextColor="White"
+                    CornerRadius="10"
+                    Margin="0,10,0,10"/>
+
+            <Button x:Name="btnActualizarPersona"
+                    Text="Actualizar Persona"
+                    Clicked="btnActualizarPersona_Clicked"
+                    Grid.Row="3"
+                    Grid.Column="0"
+                    BackgroundColor="#FFC107"
+                    TextColor="Black"
+                    CornerRadius="10"
+                    Margin="0,10,0,10"/>
+
+            <Button x:Name="btnEliminarPersona"
+                    Text="Eliminar Persona"
+                    Clicked="btnEliminarPersona_Clicked"
+                    Grid.Row="4"
+                    Grid.Column="0"
+                    BackgroundColor="#F44336"
+                    TextColor="White"
+                    CornerRadius="10"
+                    Margin="0,10,0,10"/>
 
             <CollectionView x:Name="listPersons"
-                            Grid.Row="3">
+                            SelectionMode="Single"
+                            SelectionChanged="listPersons_SelectionChanged"
+                            Grid.Row="5"
+                            Background="White">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
+                        <Frame Padding="10" Margin="5" BackgroundColor="#E0E0E0" CornerRadius="10" HasShadow="True">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
 
-                            <Label Text="{Binding Id}"
-                                   Grid.Column="0"/>
-                            <Label Text="{Binding Name}"
-                                   Grid.Column="1"/>
-                        </Grid>
+                                <Label Text="{Binding Id}"
+                                    Grid.Column="0"
+                                       FontSize="14"
+                                       TextColor="Black"/>
+                                <Label Text="{Binding Name}"
+                                    Grid.Column="1"
+                                       FontSize="14"
+                                       TextColor="Black"/>
+                            </Grid>
+                        </Frame>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
